--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   width: 100%;
